# ZCodeProject

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  start.bat  start.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  deps.py  main.py  prompts.py  schemas.py
backend/app/routes/: audio.py  chat.py  documents.py
backend/app/services/: asr_base.py  chat_service.py  doc_parser.py  document_store.py  llm.py  mimo_asr.py  nls_client.py  resampler.py  session.py  suggest.py  token_provider.py
backend/scripts/: check_audio_level.py
backend/tests/: conftest.py  test_asr_factory.py  test_audio_route.py  test_chat_route.py  test_chat_service.py  test_config.py  test_doc_parser.py  test_document_store.py  test_documents_route.py  test_llm.py  test_mimo_asr.py  test_nls_client.py  test_prompts.py  test_resampler.py  test_session.py  test_suggest.py  test_token_provider.py
docs/: SETUP.md
docs/superpowers/plans/: 2026-06-23-interview-assistant.md  2026-06-24-windows-support.md
docs/superpowers/specs/: 2026-06-23-interview-assistant-design.md  2026-06-24-windows-support-design.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: asrSocket.ts  chat.ts  documents.ts
frontend/src/audio/: capture-worklet.ts
frontend/src/components/: ChatPanel.tsx  Controls.tsx  DocumentList.tsx  DocumentUpload.tsx  SessionSidebar.tsx  SubtitlePanel.tsx  SuggestPanel.tsx
frontend/src/hooks/: useAudioCapture.ts  useChat.ts  useDevices.ts  (+3 more)
(+2 files in other folders)
