[project]
name = "interview-assistant-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "websockets>=12.0",
  "zhipuai>=2.1.0",
  "sniffio>=1.3",
  "aliyun-python-sdk-core>=2.15.0",
  "alibabacloud-nls-python-sdk>=1.0.2",
  "numpy>=1.26",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
